tests/fixtures/invalid/max_set_bytes.py
# Cannot call max() with Set[int], Bytes
x = max({1, 2, 3}, b"hello")
